--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,8 @@
-@import 'tailwindcss';
+@import url("https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap");
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
     body {
@@ -68,6 +67,7 @@
     header .current-user-dropdown a:hover {
         @apply text-orange-700;
     }
+
 
     .sticky-header {
         @apply fixed flex items-center justify-between top-0 z-50 px-5 md:px-16 w-full h-20 bg-transparent text-slate-800 transition-all duration-500 ease-in-out;
@@ -142,7 +142,7 @@
 
 @layer components {
     .responsive-container {
-        @apply md:pl-48 mt-16 w-full min-h-screen;
+        @apply mt-16 w-full min-h-screen;
     }
     .container {
         @apply px-5 md:px-8;
@@ -174,7 +174,7 @@
     }
     
     .custom-input {
-        @apply w-full px-2 py-1 mt-1 text-gray-600 bg-gray-100 border border-slate-300 focus:ring-1 focus:ring-teal-300 focus:bg-transparent focus:border-teal-500 text-base outline-none leading-8 transition-colors duration-200 ease-in-out;
+        @apply w-full px-2 py-1 mt-1 text-gray-600 bg-gray-100 border bg-opacity-50 border-slate-300 focus:ring-1 focus:ring-teal-300 focus:bg-transparent focus:border-teal-500 text-base outline-none leading-8 transition-colors duration-200 ease-in-out;
     }
     .custom-input-borderless {
         @apply w-full text-gray-600 border-b bg-transparent border-slate-300  focus:bg-transparent focus:border-indigo-500 text-base outline-none leading-8 transition-colors duration-200 ease-in-out;
@@ -183,10 +183,10 @@
         @apply flex justify-between;
     }
     .custom-search {
-        @apply w-full px-0 py-1 border-0 border-b bg-transparent border-gray-300 focus:outline-none focus:ring-0  transition-colors duration-200 ease-in-out;
+        @apply w-full px-0 py-1 border-0 border-b bg-transparent border-gray-300 focus:outline-none focus:ring-0 bg-opacity-50 transition-colors duration-200 ease-in-out;
     }
     .search-indigo {
-        @apply  border-b border-0 border-gray-300 focus:border-b focus:border-0 focus:bg-transparent text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out;
+        @apply bg-opacity-50 border-b border-0 border-gray-300 focus:border-b focus:border-0 focus:bg-transparent text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out;
     }
 
     .btn-gray {
@@ -202,7 +202,7 @@
         @apply bg-blue-600 hover:bg-blue-800 duration-200 px-3 py-1 text-slate-50;
     }
     .btn-green {
-        @apply bg-green-800 hover:bg-green-900 duration-200 px-3 py-1 text-slate-50;
+        @apply bg-green-800 hover:bg-green-900 duration-200 px-5 py-2 text-slate-50;
     }
     .btn-sky {
         @apply bg-sky-600 hover:bg-sky-800 duration-200 px-3 py-1 text-slate-50;
@@ -251,7 +251,23 @@
         @apply scale-110 transition-all duration-500 ease-in-out;
     }
 
-    
+    .filterable .tick {
+        @apply opacity-0 text-green-600 text-2xl absolute right-2;
+    }
+    .filterable:hover .tick {
+        @apply opacity-40 transition-all duration-500 ease-in-out;
+    }
+
+    .filterable input[type="checkbox"]:checked ~ label .tick {
+        @apply opacity-100;
+    }
+    .filterable input[type="checkbox"]:not(:checked) ~ label:hover {
+        @apply bg-green-50;
+    }
+    .filterable input[type="checkbox"]:checked ~ label {
+        @apply bg-green-100;
+    }
+
     .collapsible {
         @apply flex flex-col mb-4;
     }
@@ -270,12 +286,9 @@
     .collapsible .head.active ~ .body {
         @apply flex flex-col items-start w-full p-2 border border-slate-300 border-dashed text-sm;
     }
-    .pallet-teal {
-        @apply flex justify-center items-center bg-teal-100 hover:bg-teal-600 hover:text-slate-100 w-16;
-    }
-
-    .pallet {
-        @apply flex flex-col justify-center items-center bg-orange-50 hover:bg-orange-100  border-slate-200 p-8;
+    
+    .palette {
+        @apply flex flex-col justify-center items-center border bg-white p-4;
     }
     .filterOption {
         @apply flex items-center hover:cursor-pointer transition-all duration-500 ease-in-out;
@@ -283,6 +296,19 @@
     .filterOption.active .desc {
         @apply text-blue-800 underline underline-offset-4;
     }
+
+    /* .checked-label {
+        @apply flex items-center px-2 py-1 bg-orange-100 hover:bg-orange-200 hover:cursor-pointer transition-all duration-500 ease-in-out;
+    }
+    .checked-label.active {
+        @apply flex items-center px-2 py-1 bg-teal-100 hover:bg-teal-200 hover:cursor-pointer transition-all duration-500 ease-in-out;
+    }
+    .checked-label ~ .bullet {
+        @apply hidden;
+    }
+    .checked-label.active ~ .bullet {
+        @apply flex w-3 h-3 rounded-full bg-teal-600 border-2 border-white absolute -right-1 -top-1;
+    } */
 
     .card {
         @apply hover:scale-105 hover:shadow-lg hover:bg-gradient-to-b from-slate-100 to-white transition-all duration-500 ease-in-out;
@@ -299,12 +325,14 @@
     .chevron-right::after {
         content: "\203A";
     }
-    .bi-pencil-square {
+    .bi-pencil-square,
+    .bx-pencil {
         @apply text-green-600 hover:text-green-800;
     }
     .bi-trash3,
-    .bi-x {
-        @apply text-red-600 hover:text-red-800;
+    .bi-,
+    .bx-trash {
+        @apply text-red-600 hover:text-red-800 hover:cursor-pointer;
     }
 
     .awesome-chk span {
@@ -337,8 +365,195 @@
     }
     .modal.shown {
         @apply flex top-[calc(60%)] left-1/2  transform -translate-x-1/2 -translate-y-1/2;
+        /* @apply fixed inset-0 justify-center items-center; */
     }
-    
+    /* hero */
+
+    #floating-modal.float {
+        @apply transform translate-x-36 transition-all;
+    }
+    .feature-box {
+        @apply flex flex-col justify-center items-center p-4 md:p-8 border border-transparent;
+    }
+    .testimonials {
+        padding: 60px 0;
+    }
+
+    .testimonials .section-header {
+        margin-bottom: 40px;
+    }
+
+    .testimonials .testimonials-carousel {
+        overflow: hidden;
+    }
+
+    .testimonials .testimonial-item {
+        text-align: center;
+    }
+
+    .testimonials .testimonial-item .testimonial-img {
+        width: 200px;
+        /* border-radius: 50%; */
+        border: 4px solid #fff;
+        margin: 0 auto;
+    }
+
+    .testimonials .testimonial-item h3 {
+        font-size: 20px;
+        font-weight: bold;
+        margin: 10px 0 5px 0;
+        color: #111;
+    }
+
+    .testimonials .testimonial-item h4 {
+        font-size: 14px;
+        color: #999;
+        margin: 0 0 15px 0;
+    }
+
+    .testimonials .testimonial-item .quote-icon-left,
+    .testimonials .testimonial-item .quote-icon-right {
+        color: #fbfcfd;
+        font-size: 26px;
+    }
+
+    .testimonials .testimonial-item .quote-icon-left {
+        display: inline-block;
+        left: -5px;
+        position: relative;
+    }
+
+    .testimonials .testimonial-item .quote-icon-right {
+        display: inline-block;
+        right: -5px;
+        position: relative;
+        top: 10px;
+    }
+
+    .testimonials .testimonial-item p {
+        font-style: italic;
+        margin: 0 auto 15px auto;
+    }
+
+    .testimonials .swiper-pagination {
+        margin-top: 20px;
+        position: relative;
+    }
+
+    .testimonials .swiper-pagination .swiper-pagination-bullet {
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        opacity: 1;
+        border: 1px solid #68a4c4;
+    }
+
+    .testimonials .swiper-pagination .swiper-pagination-bullet-active {
+        background-color: #68a4c4;
+    }
+
+    /* for mathjax */
+    .no-line-break {
+        white-space: nowrap;
+    }
+
+    .question {
+        @apply rounded text-left mt-6 text-slate-600;
+    }
+    .question .head {
+        @apply flex flex-col md:flex-row flex-wrap md:items-center gap-y-2 font-semibold py-2 border-y text-teal-700;
+    }
+
+    .question .sr {
+        @apply w-8 md:w-12  text-center;
+    }
+    .question .title {
+        @apply flex flex-1 items-center;
+    }
+    .question .sub {
+        @apply flex items-center py-2;
+    }
+    .question:not(.mcq) .sub {
+        @apply border-b;
+    }
+    .question .head .statement,
+    .question .sub .statement {
+        @apply flex-1;
+    }
+    .question .action {
+        @apply flex justify-center items-center gap-3;
+    }
+    .question .choices {
+        @apply grid grid-cols-1 md:grid-cols-4 gap-2 pl-8  bg-slate-100 text-sm md:py-4;
+    }
+    .question .choice {
+        @apply flex items-center space-x-2;
+    }
+    .question .choice .desc {
+        @apply flex-1;
+    }
+    .question .bi-arrow-repeat {
+        @apply text-green-600;
+    }
+
+    .font-size-container {
+        @apply text-left hover:cursor-pointer hover:bg-teal-200 relative;
+    }
+    .font-size-container input {
+        @apply hidden;
+    }
+    .font-size-container div {
+        @apply px-3;
+    }
+    .page-size-container,
+    .page-orientation-container {
+        @apply flex justify-center items-center hover:cursor-pointer bg-teal-50 hover:bg-teal-300 border relative;
+    }
+    .page-size-container.active,
+    .page-orientation-container.active,
+    .font-size-container.active {
+        @apply bg-teal-300 hover:cursor-auto;
+    }
+
+    .callable {
+        @apply w-full h-full bg-slate-100 place-content-center text-center md:rounded-lg relative;
+    }
+    .callable .right-pointer {
+        @apply absolute w-4 h-4 hidden md:block md:-right-2 md:top-[40%]  bg-slate-100 transform rotate-45;
+    }
+    .font-size,
+    .page-size,
+    .page-orientation {
+        @apply absolute top-1 left-1 -z-10;
+    }
+    .page.active .paper {
+        @apply bg-teal-300;
+    }
+    .page:hover .paper {
+        @apply bg-teal-300 hover:cursor-pointer;
+    }
+    .paper-subject {
+        @apply relative flex flex-row justify-between items-center text-left hover:bg-slate-100 p-3 border-b transition-all ease-in-out duration-500;
+    }
+    .paper-subject i {
+        @apply absolute right-12 transition-all duration-1000 ease-in-out text-transparent;
+    }
+    .paper-subject:hover i {
+        @apply right-4 text-slate-800;
+    }
+    .checkable-row input{
+        @apply block;
+    }
+    .checkable-row i{
+        @apply hidden;
+    }
+   .checkable-row.active i{
+        @apply block text-cyan-500 font-extrabold;
+    }
+
+    .checkable-row.active input{
+        @apply hidden;
+    }
     .round-tab {
         @apply rounded-full flex justify-center items-center w-12 h-12 text-slate-600 bg-slate-100 hover:bg-green-800  hover:text-slate-100 hover:cursor-pointer transition-all duration-500 ease-in-out;
     }
@@ -346,5 +561,24 @@
         @apply bg-green-800 text-white hover:bg-green-600;
     }
 
-}
+    .choice{
+        @apply  bg-teal-50 hover:bg-teal-100 border hover:cursor-pointer rounded p-4 text-slate-600 text-sm transition-all duration-500;
+    }
+    .choice.active{
+        /* @apply  bg-teal-200 hover:bg-teal-300; */
+        @apply  bg-gradient-to-b from-teal-100 to-teal-50 border-teal-200 border;
+    }
+    .answer .option label{
+        @apply text-sm text-left;
+    }
+    .scorecard{
+        @apply p-8 md:w-1/2 mx-auto mt-8 border rounded-lg ;
+    }
+    .scorecard.success{
+        @apply bg-gradient-to-b from-green-100 text-teal-600 to-white
+    }
+    .scorecard.failure{
+        @apply bg-gradient-to-b from-red-100 text-red-600 to-white
+    }
 
+}
