--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -142,7 +142,7 @@
 
 @layer components {
     .responsive-container {
-        @apply mt-16 w-full min-h-screen;
+        @apply mt-16 w-full min-h-screen mx-auto;
     }
     .container {
         @apply px-5 md:px-8;
@@ -236,7 +236,7 @@
         @apply px-2 text-slate-400 hover:text-slate-600 hover:no-underline hover:cursor-pointer;
     }
     .tab.active {
-        @apply font-semibold text-slate-600 underline underline-offset-[8px] decoration-teal-400 hover:cursor-auto relative;
+        @apply font-semibold text-slate-600 underline underline-offset-[8px] decoration-teal-400 relative;
     }
 
     .tab.active .bullet {
